[package]
name = "gst-webrtcredux"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ImTheSquid/gst-webrtcredux"
homepage = "https://github.com/ImTheSquid/gst-webrtcredux"
license = "MIT OR Apache-2.0"
description = "A revived version of GStreamer's webrtcbin plugin built for modern protocols"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", version = "0.*", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
gst-app = { package = "gstreamer-app", version = "0.18.7", features = ["v1_16"] }
gst-base = { package = "gstreamer-base", version = "0.*", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
gst-video = { package = "gstreamer-video", version = "0.18.7", features = ["v1_16"] }
gst-audio = { package = "gstreamer-audio", version = "0.18.7", features = ["v1_16"] }
once_cell = "1.0"
strum = "0.24"
strum_macros = "0.24"
futures = "0.3.21"
tokio = { version = "1.20.0", default-features = false, features = ["time", "rt-multi-thread"] }
#webrtc-rs stuff TODO: Remove unnecessary dependencies
webrtc = "0.4.0"
webrtc-media = "0.4.5"
interceptor = "0.7.6"
webrtc-data = "0.3.3"
rtp = "0.6.5"
rtcp = "0.6.5"
webrtc-srtp = "0.8.9"
webrtc-sctp = "0.5.0"
webrtc-mdns = "0.4.2"
stun = "0.4.2"
turn = "0.5.4"
webrtc-ice = "0.7.0"
sdp = "0.5.1"
webrtc-util = "0.5.4"
bytes = "1.2.0"
anyhow = "1.0.58"

[lib]
name = "webrtcredux"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"

[dev-dependencies]
indoc = "1.0.6"
enum_dispatch = "0.3.8"