[package]
name = "gst-plugin-webrtcredux"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/ImTheSquid/gst-webrtcredux"
homepage = "https://github.com/ImTheSquid/gst-webrtcredux"
license = "MIT OR Apache-2.0"
description = "A revived version of GStreamer's webrtcbin plugin built for modern protocols"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gst = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer", features = ["v1_16"] }
# gst-app = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-app", features = ["v1_16"] }
# gst-base = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-base", features = ["v1_16"] }
# gst-video = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-video", features = ["v1_16"] }
# gst-audio = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-audio", features = ["v1_16"] }
gst = { package = "gstreamer", version = "0.18.0", features = ["v1_16"] }
gst-app = { package = "gstreamer-app", version = "0.18.7", features = ["v1_16"] }
gst-base = { package = "gstreamer-base", version = "0.18.0", features = ["v1_16"] }
gst-video = { package = "gstreamer-video", version = "0.18.7", features = ["v1_16"] }
gst-audio = { package = "gstreamer-audio", version = "0.18.7", features = ["v1_16"] }
once_cell = "1.0"
strum = "0.24"
strum_macros = "0.24"
futures = "0.3.21"
tokio = { version = "1.20.0", default-features = false, features = ["time", "rt-multi-thread"] }
webrtc = "0.4.0"
webrtc-media = "*"
interceptor = "*"
webrtc-util = "*"
bytes = "1.2.0"
anyhow = "1.0.58"

[lib]
name = "webrtcredux"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"

[dev-dependencies]
indoc = "1.0.6"
enum_dispatch = "0.3.8"

[dependencies.xcb]
version = "1"
