[package]
name = "gst-plugin-webrtcredux"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/ImTheSquid/gst-webrtcredux"
homepage = "https://github.com/ImTheSquid/gst-webrtcredux"
license = "MIT OR Apache-2.0"
description = "A revived version of GStreamer's webrtcbin plugin built for modern protocols"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gst = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer", features = ["v1_16"] }
# gst-app = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-app", features = ["v1_16"] }
# gst-base = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-base", features = ["v1_16"] }
# gst-video = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-video", features = ["v1_16"] }
# gst-audio = { git="https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package = "gstreamer-audio", features = ["v1_16"] }
gst = { package = "gstreamer", version = "0.19.3", features = ["v1_16"] }
gst-app = { package = "gstreamer-app", version = "0.19.2", features = ["v1_16"] }
gst-base = { package = "gstreamer-base", version = "0.19.3", features = ["v1_16"] }
gst-video = { package = "gstreamer-video", version = "0.19.3", features = ["v1_16"] }
gst-audio = { package = "gstreamer-audio", version = "0.19.3", features = ["v1_16"] }
once_cell = "1.16"
strum = "0.24"
strum_macros = "0.24"
futures = "0.3.25"
tokio = { version = "1.22.0", default-features = false, features = ["time", "rt-multi-thread"] }
webrtc = "0.6.0"
interceptor = "0.8.2"
bytes = "1.3.0"
anyhow = "1.0.66"

[lib]
name = "webrtcredux"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"

[dev-dependencies]
indoc = "1.0.6"
enum_dispatch = "0.3.8"

[dependencies.xcb]
version = "1"

[dependencies.webrtc-srtp]
version = "0.9.0"

[dependencies.rtcp]
version = "0.7.2"