[package]
name = "interactive-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
gst = { package = "gstreamer", version = "0.18.0", features = ["v1_16"] }
gst-plugin-webrtcredux = { path = "../../../" }
base64 = "0.13.0"
anyhow = "1.0.58"
tokio = "1.20.1"
clipboard = "0.5.0"